--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ html,body {
 
 #wrap .container-fluid {
   padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 /* Wrapper for page content to push down footer */
