--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,15 @@ html,body {
 
 
 
+/*.tabs-left {
+  position: relative;
+}*/
+
+/*.nav-tabs {
+  height: 100%;
+  min-height: 100%;
+  position: absolute;
+}*/
 
 
 .nav-tabs-app li {
