--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -365,6 +365,11 @@
           <table class="table table-striped">
             <thead>
               <tr>
+                <th>
+                  <input type="checkbox"
+                          ng-model="selectionMaster.trash"
+                          ng-click="toggleSelection(messages.trash, 'trash', selectionMaster.trash)">
+                </th>
                 <th>Subject</th>
                 <th>Date</th>
                 <th>State</th>
@@ -374,18 +379,20 @@
             <tbody>
 
               <tr ng-repeat="message in messages.trash">
+                <td>
+                  <input type="checkbox"
+                          ng-model="selection.trash[message.uuid]"
+                          ng-checked="selectionMaster.trash">
+                </td>
                 <td><a href="#/profile/{{member.uuid}}/view">{{message.subject}}</a></td>
                 <td>{{message.creationTime}}</td>
                 <td>{{message.state}}</td>
                 <td>
                   <div class="pull-right">
 
-                    <a href="#/profile/{{member.uuid}}/edit" 
-                      class="btn btn-mini"><i class="icon-share-alt"></i></a>
-
                     <button type="submit" 
-                            ng-click="removeMember(member.uuid, group.uuid)" 
-                            class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
+                            ng-click="restoreMessage(message.uuid)" 
+                            class="btn btn-success btn-mini"><i class="icon-thumbs-up icon-white"></i></button>
 
                   </div>
                 </td>
@@ -395,9 +402,14 @@
           </table>
 
           <button type="button" 
+                  ng-click="restoreMessages(selection.trash)" 
+                  class="btn btn-small btn-success pull-left">
+                  <i class="icon-thumbs-up icon-white"></i> Restore Selected Messages</button>
+
+          <!-- <button type="button" 
                   ng-click="removeMembers(selection, group)" 
                   class="btn btn-small btn-danger pull-left">
-                  <i class="icon-trash icon-white"></i> Empty Trash</button>
+                  <i class="icon-trash icon-white"></i> Empty Trash</button> -->
 
           <span class="muted pull-right">
             <small><i>There are {{messages.trash.length}} message(s)</i></small>
