--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -356,6 +356,14 @@
 
         <div class="tab-header">
           <h3 class="pull-left">Trash</h3>
+
+          <div class="pull-right">
+            <button type="button" 
+                  ng-click="emptyTrash()" 
+                  class="btn btn-danger pull-left">
+                  <i class="icon-trash icon-white"></i> Empty Trash</button>
+          </div>
+
         </div>
         <hr>
 
@@ -405,11 +413,6 @@
                   ng-click="restoreMessages(selection.trash)" 
                   class="btn btn-small btn-success pull-left">
                   <i class="icon-thumbs-up icon-white"></i> Restore Selected Messages</button>
-
-          <!-- <button type="button" 
-                  ng-click="removeMembers(selection, group)" 
-                  class="btn btn-small btn-danger pull-left">
-                  <i class="icon-trash icon-white"></i> Empty Trash</button> -->
 
           <span class="muted pull-right">
             <small><i>There are {{messages.trash.length}} message(s)</i></small>
