--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -139,9 +139,9 @@
 
         <dl>
           <dt>Sender</dt>
-            <dd>{{message.sender}}</dd>
+            <dd>{{message.requester}}</dd>
           <dt>Receiver</dt>
-            <dd>{{message.receiver}}</dd>
+            <dd>{{message.responder}}</dd>
           <dt>Date</dt>
             <dd>{{message.datetime}}</dd>
           <dt>Module</dt>
@@ -183,9 +183,9 @@
                           ng-click="toggleSelection(messages.inbox, 'inbox', selectionMaster.inbox)">
                 </th>
                 <th></th>
+                <th>From</th>
                 <th>Subject</th>
                 <th>Date</th>
-                <th>State</th>
                 <th></th>
               </tr>
             </thead>
@@ -198,9 +198,9 @@
                           ng-checked="selectionMaster.inbox">
                 </td>
                 <td><span class="label label-warning" ng-show="(message.state=='NEW')">New</span></td>
+                <td>{{message.requester|convertEve|convertUserIdToName}}</td>
                 <td><a href="#/messages/{{message.uuid}}">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
-                <td>{{message.state}}</td>
+                <td>{{message.creationTime|convertTimeStamp}}</td>
                 <td>
                   <div class="pull-right">
                   
@@ -250,9 +250,9 @@
                           ng-model="selectionMaster.outbox"
                           ng-click="toggleSelection(messages.outbox, 'outbox', selectionMaster.outbox)">
                 </th>
+                <th style="max-width: 400px;">Receiver(s)</th>
                 <th>Subject</th>
                 <th>Date</th>
-                <th>State</th>
                 <th></th>
               </tr>
             </thead>
@@ -264,9 +264,11 @@
                           ng-model="selection.outbox[message.uuid]"
                           ng-checked="selectionMaster.outbox">
                 </td>
+                <td>
+                  <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
+                </td>
                 <td><a href="#/messages/{{message.uuid}}">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
-                <td>{{message.state}}</td>
+                <td>{{message.creationTime|convertTimeStamp}}</td>
                 <td>
                   <div class="pull-right">
                   
@@ -325,9 +327,10 @@
                           ng-model="selectionMaster.trash"
                           ng-click="toggleSelection(messages.trash, 'trash', selectionMaster.trash)">
                 </th>
+                <th>Box</th>
+                <th>Person(s)</th>
                 <th>Subject</th>
                 <th>Date</th>
-                <th>State</th>
                 <th></th>
               </tr>
             </thead>
@@ -339,9 +342,10 @@
                           ng-model="selection.trash[message.uuid]"
                           ng-checked="selectionMaster.trash">
                 </td>
+                <td><span class="label">{{message.box}}</span></td>
+                <td></td>
                 <td><a href="#/profile/{{member.uuid}}/view">{{message.subject}}</a></td>
-                <td>{{message.creationTime}}</td>
-                <td>{{message.state}}</td>
+                <td>{{message.creationTime|convertTimeStamp}}</td>
                 <td>
                   <div class="pull-right">
 
