no subject fix for messages & person names in trash box listing

--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -4,6 +4,8 @@
   <div class="btn-group pull-right">
     <button type="submit" 
             class="btn btn-success">New Group</button>
+    <button type="submit" 
+            class="btn btn-success">New User</button>
   </div>
 
   <!-- Search members -->
@@ -119,7 +121,7 @@
                   class="btn"><i class="icon-edit"></i> Edit Group</button>
           <button type="button" 
                   ng-click="deleteGroup(group.uuid)" 
-                  class="btn"><i class="icon-trash"></i> Delete Group</button>
+                  class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Group</button>
         </div>
 
         <!-- <button type="button" 
