--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -133,29 +133,31 @@
       <div class="tab-pane {{(views.message==true) && 'active'}}" id="viewTab" ng-show="views.message">
 
         <div class="tab-header">
-          <h3 class="pull-left">Message</h3>
+          <h3 class="pull-left">{{message.subject}}</h3>
+
+          <div class="pull-right">
+            <button type="button" 
+                    ng-click="resetViews()" 
+                    class="btn">Discard</button>
+            <button type="button" 
+                    class="btn btn-success"><i class="icon-share-alt icon-white"></i> Reply Message</button>
+            <button type="button" 
+                    class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Message</button>
+          </div>
         </div>
         <hr>
 
         <dl>
           <dt>Sender</dt>
-            <dd>{{message.requester}}</dd>
-          <dt>Receiver</dt>
-            <dd>{{message.responder}}</dd>
+            <dd>{{message.requester|convertEve|convertUserIdToName}}</dd>
+          <dt>Receiver(s)</dt>
+            <dd>
+              <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
+            </dd>
           <dt>Date</dt>
-            <dd>{{message.datetime}}</dd>
-          <dt>Module</dt>
-            <dd>{{message.module}}</dd>
-          <dt>Priority</dt>
-            <dd>{{message.priority}}</dd>
+            <dd>{{message.datetime|convertTimeStamp}}</dd>
           <dt>Question Text</dt>
             <dd>{{message.question_text}}</dd>
-          <dt>State</dt>
-            <dd>{{message.state}}</dd>
-          <dt>Subject</dt>
-            <dd>{{message.subject}}</dd>
-          <dt>Type</dt>
-            <dd>{{message.type}}</dd>
         </dl>
 
 
@@ -346,7 +348,7 @@
                 <td>
                   <span ng-repeat="receiver in message.responder">{{receiver|convertEve|convertUserIdToName}}, </span>
                 </td>
-                <td><a href="#/profile/{{member.uuid}}/view">{{message.subject}}</a></td>
+                <td><a href="#/messages/{{message.uuid}}">{{message.subject}}</a></td>
                 <td>{{message.creationTime|convertTimeStamp}}</td>
                 <td>
                   <div class="pull-right">
